# MedicineForecast

./: .gitignore
api/: .env.example  .gitignore  main.py  pyproject.toml  schemas.py
api/dataset/: LLM-output.json  my_list.json  salesweekly.csv
api/deeplake/: dataset_meta.json
api/deeplake/_embedding_shape/: tensor_meta.json
api/deeplake/embedding/: tensor_meta.json
api/deeplake/id/: tensor_meta.json
api/deeplake/metadata/: tensor_meta.json
api/deeplake/text/: tensor_meta.json
api/helper/: arima_pharma_sales_prediction.py  pharma_sales_prediction.py  question_answering_agent.py  serp.ipynb
api/models/: A10B.json  A10B.keras  B01A.json  C03.json  C07.json  C08.json  C08.keras  C09.json  C09.keras  C10.json  C10.keras  N02BA.keras  P02C.json  P02C.keras  R03.keras  R06.keras
front/: .env.example  package-lock.json  package.json
front/public/: index.html
front/src/: .App.js.swp  App.jsx  config.jsx
front/src/components/: Footer.jsx  InfoCard.js  InfoCard.jsx  LLMSection.jsx  ListView.js  ListView.jsx  Navbar.jsx  NewsCard.js  NewsCard.jsx
front/src/pages/: MainPage.js  MainPage.jsx
